# staticx-pyinstaller-rosetta-error-repro

./: README.md  build  bundle_test  main.py  pyproject.toml
docker/: Dockerfile  build  common.inc
