[tool.poetry]
name = "staticx-pyinstaller-rosetta-error-repro"
version = "0.1.0"
description = ""
authors = ["Brett Higgins <brett.higgins@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dinosay = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
